# product-api/handlers/get.go
@@ -13,15 +13,25 @@ import (
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("[DEBUG] get all records")
-
+	
+	p.l.Debug("Get all records")
 	rw.Header().Add("Content-Type", "application/json")
-	prods := data.GetProducts()
+	
+	currency:= r.URL.Query().Get("currency")
+	
+	prods,err := p.productDB.GetProducts(currency)
+	if err != nil {
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
 
-	err := data.ToJSON(prods, rw)
+
+	err = data.ToJSON(prods, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Serializing product","error",err)
+		return
 	}
 }
 
@@ -34,22 +44,22 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
+	p.l.Debug("Get record","id", id)
 
-	p.l.Println("[DEBUG] get record id", id)
-
-	prod, err := data.GetProductByID(id)
+	currency:= r.URL.Query().Get("currency")
+	prod, err := p.productDB.GetProductByID(id,currency)
 
 	switch err {
 	case nil:
 
 	case data.ErrProductNotFound:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Fetching product", "error",err)
 
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	default:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Fetching product", "error",err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
@@ -57,22 +67,12 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	}
 
 
-	//get exchange rate
-	rr := protos.RateRequest{
-		Base: protos.Currencies(protos.Currencies_value["EUR"]),
-		Destination: protos.Currencies(protos.Currencies_value["GBP"])
-	}
-	resp,err := p.cc.GetRate(context.Background(),rr)
-	if err != nil{
-		p.l.Println("Error error getting new rate",err)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-	}
-	prod.Price = prod.Price * resp.Rate 
+	
 
 
 	err = data.ToJSON(prod, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Unable serializing product", "error",err)
 	}
 }
