# product-api/main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"os"
 	"os/signal"
@@ -15,6 +14,8 @@ import (
 	gohandlers "github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
 	"github.com/nicholasjackson/env"
+	"google.golang.org/grpc"
+	hclog "github.com/hashicorp/go-hclog"
 )
 
 var bindAddress = env.String("BIND_ADDRESS", false, ":9090", "Bind address for the server")
@@ -23,18 +24,22 @@ func main() {
 
 	env.Parse()
 
-	l := log.New(os.Stdout, "products-api ", log.LstdFlags)
+	l := hclog.Default()
 	v := data.NewValidation()
 
-	conn,err := grpc.Dial("localhost:9092")
+	conn,err := grpc.Dial("localhost:9092",grpc.WithInsecure())
 	if err != nil{
 		panic(err)
 	}
+
 	//create grpc client
 	cc := protos.NewCurrencyClient(conn)
 
+	//create productdb 
+	pdb := data.NewProductsDB(cc,l) 
+
 	// create the handlers
-	ph := handlers.NewProducts(l, v,cc)
+	ph := handlers.NewProducts(l,v,pdb)
 
 	// create a new serve mux and register the handlers
 	sm := mux.NewRouter()
@@ -42,7 +47,9 @@ func main() {
 	// handlers for API
 	getR := sm.Methods(http.MethodGet).Subrouter()
 	getR.HandleFunc("/products", ph.ListAll)
+	getR.HandleFunc("/products", ph.ListAll).Queries("currency","{[A-Z]{3}}")
 	getR.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle)
+	getR.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle).Queries("currency","{[A-Z]{3}}")
 
 	putR := sm.Methods(http.MethodPut).Subrouter()
 	putR.HandleFunc("/products", ph.Update)
@@ -69,7 +76,7 @@ func main() {
 	s := http.Server{
 		Addr:         *bindAddress,      // configure the bind address
 		Handler:      ch(sm),                // set the default handler
-		ErrorLog:     l,                 // set the logger for the server
+		ErrorLog:     l.StandardLogger(&hclog.StandardLoggerOptions{}),                 // set the logger for the server
 		ReadTimeout:  5 * time.Second,   // max time to read request from the client
 		WriteTimeout: 10 * time.Second,  // max time to write response to the client
 		IdleTimeout:  120 * time.Second, // max time for connections using TCP Keep-Alive
@@ -77,11 +84,11 @@ func main() {
 
 	// start the server
 	go func() {
-		l.Println("Starting server on port 9090")
+		l.Info("Starting server on port 9090")
 
 		err := s.ListenAndServe()
 		if err != nil {
-			l.Printf("Error starting server: %s\n", err)
+			l.Error("Error starting server:", "error",err)
 			os.Exit(1)
 		}
 	}()
@@ -93,7 +100,7 @@ func main() {
 
 	// Block until a signal is received.
 	sig := <-c
-	log.Println("Got signal:", sig)
+	l.Info("Got signal:", "sig",sig)
 
 	// gracefully shutdown the server, waiting max 30 seconds for current operations to complete
 	ctx, _ := context.WithTimeout(context.Background(), 30*time.Second)
